# vapour

./: .Rbuildignore  .gitattributes  .gitignore  .travis.yml  404.html  CONDUCT.html  CRAN-RELEASE  DESCRIPTION  Dockerfile  NAMESPACE  NEWS.md  README.Rmd  README.md  authors.html  cleanup  config.status  configure  configure.ac  cran-comments.md  index.html  pkgdown.yml  proj_conf_test  sitemap.xml  vapour.Rproj
.github/: FUNDING.yml
.github/workflows/: R-CMD-check-macos-brew.yaml  R-CMD-check.yaml  R-CMD-check_rhub.yaml  check-gdal-latest.yml  check-standard.yaml  pkgdown.yaml
R/: 000_vapour_input.R  00_read_block.R  00_utils.R  00_warpgeneral.R  RcppExports.R  cpp11.R  gcp.R  index_input_geometry.R  plot_raster.R  raster-info.R  raster-input.R  raster_warp.R  read.R  read_gdal_attributes.R  read_gdal_geometry.R  read_stream_internal.R  reproj.R  super-simple-raster.R  sysdata.rda  utils.R  vapour-gdal-library.R  vapour-helpers.R  vapour-package.R  vapour-package.r  vapour_input.R  vapour_input_attributes.R  vapour_input_geometry.R  vapour_tilexyz.R  vapour_vrt.R  vapour_vsi_list.R  vector_vrt.R  yyy-deprecate.R  zzz.R
articles/: feature-access.html  index.html  vapour.html
data/: sst_c.rda  tas_wkt.rda
data-raw/: antcoast.R  gcp.R  gdal-autotest.R  index_csv.R  logo.R  meander_valley_postcode.R  missinggeom.gpkg  osm.R  point3d.R  sdsfile.R  sst_c.R  sticker0.R  tas_wkt.R  unidata.R  volcano.R  vsi_list.R
data-raw/badnc/: bad_netcdf_geoloc_arrays.nc  badnc.R
docs/: 404.html  CONDUCT.html  authors.html  index.html  pkgdown.yml
docs/articles/: index.html  vapour.html
docs/news/: index.html
docs/reference/: GDAL-library.html  index.html  raster_info.html  raster_io.html  raster_sds_info.html  sds_info.html  sst_c.html  tas_wkt.html  vapour-deprecated.html  vapour-package.html  vapour.html  vapour_geom_summary.html  vapour_layer_names.html  vapour_raster_gcp.html  vapour_raster_info.html  vapour_read_attributes.html  vapour_read_extent.html  vapour_read_feature_what.html  vapour_read_geometry.html  vapour_read_geometry_text.html  vapour_read_names.html  vapour_read_raster.html  vapour_report_attributes.html  vapour_sds_names.html  vapour_srs_wkt.html  vapour_vsi_list.html  vapour_warp_raster.html
inst/: WORDLIST
inst/R6-api/: R6_GDALDataset.R
inst/benchmarks/: gdb-tab-shp.R  gdb-tab-shp.Rmd  limit_n.R  test-mem.R
inst/ci/: CHECK.out  Dockerfile  INSTALL.out  TEST.out
inst/ci/dewey-valgrind/: Dockerfile
inst/ci/fedora-clang-devel-san/: Dockerfile  Dockerfile1Dockerfile
inst/cmd/: stream.cpp
inst/conversion/: test-coverage-gaps.R  vapour-cpp11-conversion-guide.md
inst/conversion/cpp11-examples/: 00_config.cpp  00_utils.cpp  CollectorList.h  gdalgeometry.h  gdallibrary.h  gdalmiscutils.h  gdalraster.h  gdalvectorstream.h  gdalwarpgeneral.h
inst/extdata/: index_point.csv  point3d.gpkg  sst.tif  sst_c.fgb  sstlaea.tif  volcano_overview.tif
inst/readwrite/: readwriteexample.R
inst/stars/: very-early-broken-stars-overview.R  very-early-stars-overview.R
inst/warpsandbox/: vrt_stars-terra_compare.R  warping.R
inst/wms/: elevation-tiles-prod.xml
man/: GDAL-library.Rd  buildvrt.Rd  gdal_info.Rd  gdal_raster_data.Rd  plot_raster.Rd  raster_info.Rd  raster_io.Rd  raster_sds_info.Rd  rasterio.Rd  read_gdal_geometry.Rd  read_gdal_table.Rd  sds_info.Rd  sql_vapour.Rd  ssraster.Rd  sst_c.Rd  tas_wkt.Rd  to_bblob.Rd  to_binary.Rd  to_format.Rd  vapour-deprecated.Rd  vapour-package.Rd  vapour.Rd  vapour_create.Rd  vapour_crs_is_lonlat.Rd  vapour_geolocation.Rd  vapour_geom_name.Rd  vapour_geom_summary.Rd  vapour_layer_extent.Rd  vapour_layer_info.Rd  vapour_layer_names.Rd  vapour_raster_gcp.Rd  vapour_raster_info.Rd  vapour_read_attributes.Rd  vapour_read_extent.Rd  vapour_read_feature_what.Rd  vapour_read_fids.Rd  vapour_read_fields.Rd  vapour_read_geometry.Rd  vapour_read_geometry_cpp.Rd  vapour_read_geometry_text.Rd  (+16 more)
news/: index.html
reference/: GDAL-library.html  buildvrt.html  gdal_raster_data.html  index.html  sst_c.html  tas_wkt.html  vapour-package.html  vapour_create.html  vapour_crs_is_lonlat.html  vapour_geolocation.html  vapour_geom_name.html  vapour_geom_summary.html  vapour_layer_extent.html  vapour_layer_info.html  vapour_layer_names.html  vapour_raster_gcp.html  vapour_raster_info.html  vapour_read_attributes.html  vapour_read_fids.html  vapour_read_fields.html  vapour_read_geometry.html  vapour_read_names.html  vapour_read_raster.html  vapour_read_raster_block.html  vapour_read_raster_raw.html  vapour_report_attributes.html  vapour_report_fields.html  vapour_sds_names.html  vapour_set_config.html  vapour_srs_wkt.html  vapour_vrt.html  vapour_vsi_list.html  vapour_warp_raster.html  vapour_warp_raster_raw.html  vapour_write_raster_block.html  vector_vrt.html
revdep/: README.md  data.sqlite  failures.md
revdep/checks/: libraries.csv
src/: 000-stream.cpp  000-warpgeneral.cpp  0000GDAL.h  000_pointer.cpp  000_read_transform.cpp  000mdimdeletele.cpp  00_config.cpp  00_gdal.cpp  00_geometry.cpp  00_memory.cpp  00_proj.cpp  00_raster.cpp  00_raster_block_io.cpp  00_utils.cpp  00_vrt.cpp  00headers_dirigible.cpp  00headers_geom_names.cpp  00headers_read_block.cpp  00headers_read_fids.cpp  CollectorList.h  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  RcppExports.cpp  VSIReadDirEx.cpp  binary-geom.cpp  contourize.cpp  cpp11.cpp  gdal_info.cpp  gdal_meta.cpp  gdal_utils.cpp  gdal_warper.cpp  init.c  pointer.cpp  raster_warp.cpp  rasterio.cpp  sds_io.cpp  srs.cpp  valgrind  (+4 more)
tests/: testthat.R  valgrind.R
tests/grindy/: run_valgrind.R  test.R  test_free.R  valgrind
tests/testthat/: test-api-funs.R  test-create.R  test-crs-less-warp.R  test-features.R  test-gdal.R  test-helpers.R  test-layers.R  test-limit_skip_n.R  test-names.R  test-proj.R  test-raster-info.R  test-raster-read.R  test-raster_read_block.R  test-rasterio-resampling.R  test-stress.R  test-test-on-rhub.R  test-tiles.R  test-utils.R  test-vrt.R  test-vsi_list.R  test-warper.R
tools/: winlibs.R
vignettes/: feature-access.Rmd  gdal-sql.Rmd  vapour.Rmd
(+25 files in other folders)
